# minimal-matrix

./: Cargo.toml
src/: error.rs  lib.rs  matrix.rs  mattermost.rs  notif_trait.rs  utils.rs
