[package]
name = "minimal-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde ={ version = "1.0.149", features = ["derive"] }
derive_more = "0.99.17"



[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"