[package]
name = "minimal-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde ={ version = "1.0.149", features = ["derive"] }
derive_more = "0.99.17"
tokio = {version = "1", features = ["macros"]}
sha1_smol = "1.0.0"




[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.25"