[package]
name = "minimal-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log = ["dep:log4rs", "dep:anyhow", "dep:log"]

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde ={ version = "1.0.149", features = ["derive"] }
derive_more = "0.99.17"
tokio = {version = "1", features = ["macros"]}
sha1_smol = "1.0.0"
async-trait = "0.1.74"
log4rs = {version = "1.3.0", optional=true}
anyhow = {version = "1.0.86", optional=true}
log = { version = "0.4.21", optional = true }




[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.25"
